# bzlmod-bootcamp

./: .bazel6rc  .bazelrc  .bazelrc-cxxopts  .bazelrc-legacy  .bazelversion  .gitignore  CHANGELOG.md  NOTICE  README.md
bootcamp/: .bazelrc  BUILD  EmitValues.java  MODULE.bazel  WORKSPACE  repo-info.py  run_tests.sh  test.sh  test_all.sh
bootcamp/extensions/: BUILD  rules_magic_config.bzl  rules_magic_leaflet_repo.bzl  rules_magic_toolchains.bzl
bootcamp/patches/: 0000-fix-rules-magic-leaflet-default-repo-target.patch  0001-replace-bind-with-repo-reference.patch  0002-fix-rules-magic-spells-enchanter.patch  0002-pass-new-local-repo-to-rules-magic-spells-repositories.patch
bootcamp/test/: MODULE.bazel.template  emit_values_test.sh  minimum_dependency_versions_test.sh  smoke_tests.sh
bootcamp/tools/: bazel
latest_dependencies/: MODULE.bazel
rules_bootcamp/: WORKSPACE
rules_bootcamp/bootcamp/: BUILD  bootcamp.bzl  bootcamp_digests.bzl  bootcamp_library.bzl  bootcamp_test.bzl  bootcamp_toolchain.bzl  config.bzl  deps.bzl  providers.bzl  toolchains.bzl
rules_bootcamp/bootcamp/private/: bootcamp.java.template  bootcamp_leaflet.bzl  leaflet_repo.bzl  test.sh.template
rules_bootcamp/src/io/frobozzco/bootcamp/: EmitDigestsWorker.java  bootcamp.java.template
rules_bootcamp/test/: BUILD  test_framework.sh
rules_magic/: MODULE.bazel  WORKSPACE
rules_magic/magic/: BUILD  config.bzl  deps.bzl  latest_deps.bzl  leaflet_repo.bzl  magic.bzl  magic_digests.bzl  magic_info.bzl  magic_library.bzl  magic_spells_repository.bzl  magic_test.bzl  magic_toolchain.bzl  magic_toolchains.bzl  magic_toolchains_repository.bzl  providers.bzl  toolchains.bzl
rules_magic/magic/extensions/: config.bzl  leaflet_repo.bzl  toolchains.bzl
rules_magic/magic/extensions/private/: bzlmod.bzl
rules_magic/magic/private/: bazel_worker_api.bzl  dev_deps.bzl  leaflet_repo.bzl  magic.java.template  magic_leaflet.bzl  magic_leaflet_repository.bzl  setup_magic_spells_repositories.bzl  setup_magic_toolchain.bzl  test.sh.template
rules_magic/magic/private/spells/: README.txt  enchanter.json
rules_magic/src/com/frobozz/magic/: BUILD  EmitDigestsWorker.java
rules_magic/test/: test_framework.sh
rules_magic/toolchains/: BUILD  providers.bzl  repositories.bzl  toolchains.bzl
rules_magic/toolchains/private/: repository.bzl
spells/enchanter/: BUILD  spells.json
spells/sorcerer/: spells.json
spells/spellbreaker/: spells.json
tools/: bazel  lint.sh
