# Copyright 2025 EngFlow, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "bzlmod_bootcamp")

git_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:git.bzl",
    "git_repository",
)

bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "29.0")

git_repository(
    name = "rules_magic",
    # Under Bazel 8, `patch_strip = 2` would work.
    patch_args = ["-p2"],
    patches = [
        "//patches:0000-fix-rules-magic-leaflet-default-repo-target.patch",
        "//patches:0001-replace-bind-with-repo-reference.patch",
    ],
    remote = "git@github.com:EngFlow-Academy/bzlmod-bootcamp.git",
    strip_prefix = "rules_magic",
    tag = "v1.0.0-own-repo-names",
)

magic_config = use_extension(
    "//extensions:rules_magic_config.bzl",
    "magic_config",
)
use_repo(magic_config, "rules_magic_config")

magic_config.settings(
    games = [
        "enchanter",
        "sorcerer",
        "spellbreaker",
    ],
    versions = [
        "1.2.3",
        "4.5.6",
        "7.8.9",
    ],
)

magic_leaflet = use_extension(
    "//extensions:rules_magic_leaflet_repo.bzl",
    "magic_leaflet",
)
use_repo(magic_leaflet, "rules_magic_leaflet")

magic_toolchains = use_extension(
    "//extensions:rules_magic_toolchains.bzl",
    "magic_toolchains",
)
use_repo(
    magic_toolchains,
    "rules_magic_spells_enchanter",
    "rules_magic_spells_spellbreaker",
)

register_toolchains("@rules_magic//magic:all")

# Dev deps, kept to maintain parity with deps.bzl. Also, since Bazel depends on
# these, this helps minimize MODULE.bazel.lock bloat and churn.
bazel_dep(name = "rules_cc", version = "0.1.1", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.0.0", dev_dependency = True)
