module(name = "bzlmod_bootcamp")

git_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:git.bzl",
    "git_repository",
)

bazel_dep(name = "rules_java", version = "8.14.0")
bazel_dep(name = "rules_proto", version = "7.0.2")
bazel_dep(name = "protobuf", version = "29.0")

git_repository(
    name = "rules_magic",
    patches = [
        "//patches:0000-fix-rules-magic-leaflet-default-repo-target.patch",
        "//patches:0001-replace-bind-with-repo-reference.patch",
        "//patches:0002-pass-new-local-repo-to-rules-magic-spells-repositories.patch",
    ],
    # Under Bazel 8, `patch_strip = 2` would work.
    patch_args = ["-p2"],
    remote = "git@github.com:EngFlow-Academy/bzlmod-bootcamp.git",
    strip_prefix = "rules_magic",
    tag = "v0.0.0-own-repo-names",
)

magic_config = use_extension(
    "//extensions:rules_magic_config.bzl",
    "magic_config",
)
use_repo(magic_config, "rules_magic_config")

magic_config.settings(
    versions = ["1.2.3", "4.5.6", "7.8.9", "10.11.12", "13.14.15"],
)

magic_leaflet = use_extension(
    "//extensions:rules_magic_leaflet_repo.bzl",
    "magic_leaflet",
)
use_repo(magic_leaflet, "rules_magic_leaflet")

magic_toolchains = use_extension(
    "//extensions:rules_magic_toolchains.bzl",
    "magic_toolchains",
)
use_repo(
    magic_toolchains,
    "rules_magic_spells_enchanter",
    "rules_magic_spells_spellbreaker",
)

register_toolchains("@rules_magic//toolchains:all")
