# Copyright 2025 EngFlow, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(name = "bzlmod_bootcamp")

bazel_dep(name = "latest_dependencies")
local_path_override(
    module_name = "latest_dependencies",
    path = "../latest_dependencies",
)

bazel_dep(name = "rules_magic")
local_path_override(
    module_name = "rules_magic",
    path = "../rules_magic",
)

magic_leaflet = use_extension(
    "@rules_magic//magic/extensions:leaflet_repo.bzl",
    "magic_leaflet",
)
use_repo(magic_leaflet, "rules_magic_leaflet")

magic_config = use_extension(
    "@rules_magic//magic/extensions:config.bzl",
    "magic_config",
)
magic_config.settings(
    games = [
        "enchanter",
        "sorcerer",
        "spellbreaker",
    ],
    versions = [
        "1.2.3",
        "4.5.6",
        "7.8.9",
    ],
)

magic_toolchains = use_extension(
    "@rules_magic//magic/extensions:toolchains.bzl",
    "magic_toolchains",
)

# Required for use with `--extra_toolchains`.
use_repo(magic_toolchains, "rules_magic_toolchains")

magic_toolchains.settings(
    enchanter = True,
    sorcerer = True,
    spellbreaker = True,
)

# Dev deps, kept to maintain parity with deps.bzl. Also, since Bazel depends on
# these, this helps minimize MODULE.bazel.lock bloat and churn.
bazel_dep(name = "rules_cc", version = "0.2.14", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.6.3", dev_dependency = True)
