# Copyright 2025 EngFlow, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""rules_magic module configuration"""

module(name = "rules_magic")

bazel_dep(name = "rules_java", version = "8.16.1")

# If you have dependencies that require it, add:
#   repo_name = "com_google_protobuf")
bazel_dep(name = "protobuf", version = "32.1")

config = use_extension(
    "//magic/extensions:config.bzl",
    "magic_config",
)
use_repo(config, "rules_magic_config")

dev_config = use_extension(
    "//magic/extensions:config.bzl",
    "magic_config",
    dev_dependency = True,
)
dev_config.settings(
    versions = [
        "1.2.3",
        "4.5.6",
        "7.8.9",
    ],
)

magic_toolchains = use_extension(
    "//magic/extensions:toolchains.bzl",
    "magic_toolchains",
)
use_repo(
    magic_toolchains,
    "rules_magic_spells_enchanter",
    "rules_magic_spells_sorcerer",
    "rules_magic_spells_spellbreaker",
)

register_toolchains("//magic:all")

# Dev deps, kept to maintain parity with deps.bzl. Also, since Bazel depends on
# these, this helps minimize MODULE.bazel.lock bloat and churn.
bazel_dep(name = "rules_cc", version = "0.2.11", dev_dependency = True)
bazel_dep(name = "rules_python", version = "1.4.1", dev_dependency = True)
